# turtlebot3_assignment_1

./: README.md  requirements.txt
turtlebot3_assignment_1/: CMakeLists.txt  package.xml
turtlebot3_assignment_1/launch/: turtlebot3_assignment_1.launch.py  turtlebot3_world.launch.py
turtlebot3_assignment_1/models/g4w1/: model.sdf  model_edited.sdf
turtlebot3_assignment_1/models/g4w2/: model.sdf
turtlebot3_assignment_1/models/g4w3/: model.config  model.sdf
turtlebot3_assignment_1/models/g4w4/: model.sdf
turtlebot3_assignment_1/scripts/: random_pose.py
turtlebot3_assignment_1/worlds/: g4w1.world  g4w2.world  g4w3.world  g4w4.world
turtlebot3_object_classifier/: README.txt  package.xml  setup.cfg  setup.py
turtlebot3_object_classifier/launch/: turtlebot3_object_classifier.launch.py
turtlebot3_object_classifier/turtlebot3_object_classifier/: object_classifier.py
turtlebot3_random_walk/: package.xml  setup.cfg  setup.py
turtlebot3_random_walk/launch/: turtlebot3_random_walk.launch.py
turtlebot3_random_walk/param/: turtlebot3_random_walk.yaml
turtlebot3_random_walk/turtlebot3_random_walk/: main.py  turtlebot3_random_walk.py  utils.py
