<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_random_walk</name>
  <version>0.0.1</version>
  <description>Turtlebot3 random walk</description>
  <maintainer email="luiz.cosmi@edu.ufes.br">luizcarloscf</maintainer>
  <license>MIT</license>

  <depend>python3-numpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
